learn to make your own error page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=belajar-spring-webmvc
 #ubah port untuk menjalankan web disini, dengan port bebas
 
 server.port=8181
+
+#shutdown the whitelabel error if you want to make error page by yourself
+#add this setting
+server.error.whitelabel.enabled=false
